fixed z-index probably

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -804,3 +804,11 @@ span.deleteicon input {
 .mb-to-front-most {
     z-index: 999999;
 }
+
+.mb-to-back-most {
+    z-index: 1;
+}
+
+#goalousNavigation {
+    z-index: 999999;
+}
